--- a/index.html
+++ b/index.html
@@ -6,9 +6,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="container-one">
+        <div class="item-first">
+            <h2>Welcome to <span class="color-change">GeoSmart</span> Plannings</h2>
+            <h3>Make your dream easy to build</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In obcaecati doloribus dolorum dicta reiciendis
+                ullam accusamus hic numquam sit minima!
+            </p>
+        </div>
+        <div class="item-first">
+            <img src="images/building-one.jpg" alt="">
+        </div>
+    </section>
+
+    <section class="container-two">
+        <div class="item-first">
+
+            <img src="images/building-two.jpg" alt="">
+
+        </div>
+        <div class="item-first">
+            <h2>Make the <span class="color-change">Best Plan for your </span> Buildings</h2>
+            <h3>Plan your work for today and every day, then work your plan</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi libero laudantium quam architecto alias
+                recusandae eveniet tempora quas.</p>
+        </div>
+    </section>
+
+    <!-- Service section -->
+
+    <!-- </div> -->
+
+    <section class="">
+        <h1 class="services">Services</h1>
+        <div class="container-three">
+            <div class="item-first single-box" id="box-1">
+                <h3>Automated Instruments</h3>
+                <h4 class="color-change" id="services-1">Make the building procedure easy</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, adipisci eius itaque enim
+                    animi,
+                    velit labore doloribus tenetur nulla reiciendis repellendus incidunt dolorem, id aperiam.</p>
+            </div>
+            <div class="item-first single-box" id="box-2">
+                <h3>High Resulation Camera</h3>
+                <h4 class="color-change" id="services-2">Can take the tough measurements easily</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo quisquam laborum illum dolorem
+                    alias nihil
+                    deleniti cum corrupti iure?</p>
+            </div>
+        </div>
+    </section>
+    <footer class="footer-design">
+        Powered by Rumman, All permission reserved
+    </footer>
 
 </body>
 
